--- a/checkin/views/sample.html
+++ b/checkin/views/sample.html
@@ -13,7 +13,7 @@
   <center><img src = '{{ sample_url }}' /></center>
   <center><h3>Visitor ID: 9999999</h3></center>
 
-  <script>
+  <!-- <script>
 
   function refresh() {
       location.reload();
@@ -21,7 +21,7 @@
   }
 
   setTimeout(refresh, 5000);
-  </script>
+  </script> -->
 
 {% else %}
   <center>
