--- a/checkin/views/studentlogin.html
+++ b/checkin/views/studentlogin.html
@@ -4,7 +4,7 @@
 
 <h1>Log in using the six-digit ID number printed on your event badge</h1>
 
-<form class="form" action= "/student" method="POST">
+<form class="form" action= "student" method="POST">
 	<label for="visitor_id">ID Code</label>
   <input type="text" value="" name="visitor_id"/>
 	<button type="submit" class="btn">View</button>
