--- a/checkin/views/checkin_visitor.html
+++ b/checkin/views/checkin_visitor.html
@@ -4,7 +4,7 @@
 
 <h1>Checkin Visitor</h1>
 
-<form class="form" action= "/checkin_visitor" method="POST">
+<form class="form" action= "checkin_visitor" method="POST">
 	<label for="visitor_id">Visitor_ID</label>
 	<input type="text" value="{{ visitor_id }}" name="visitor_id"/>
 	<input type="hidden" value="{{ deployment_slug }}" name="deployment_slug"/>
