--- a/checkin/views/main.html
+++ b/checkin/views/main.html
@@ -104,7 +104,10 @@
           <a href="checkin_visitor">Checkin Student</a> |
           <a href="edit">Edit Profile</a> |
           <a href="/">Home</a> |
-          <a href="sample">Sample Student Checkin</a>
+          <a href="sample">Sample Student Checkin</a> |
+          {% if user_link and user_link_text %}
+            <a href="{{ user_link }}" target="_blank" >{{ user_link_text }}</a> 
+          {% endif %}
           |
         {% endif %}
         {% if user and user.is_super_admin %}
