--- a/checkin/views/student.html
+++ b/checkin/views/student.html
@@ -3,7 +3,9 @@
 {% block maincontent %}
 
 <h1>Student Page</h1>
+{% if student_link and student_link_text %}
 <h3><a href="{{ student_link }}" target="_blank">{{ student_link_text }}</a></h3>
+{% endif %}
 {% for profile in profiles %}
 <div class="row">
   <div class="col-sm-6 col-md-4">
