--- a/checkin/views/visitors_index.html
+++ b/checkin/views/visitors_index.html
@@ -43,7 +43,7 @@
     </thead>
     <tbody>
       <tr>
-        <form action="/visitors" method="POST">
+        <form action="visitors" method="POST">
         <td><input type="text" name="visitor_id" /></td>
         <td><input type="submit" value="Create" /></td>
         </form>
