--- a/checkin/views/main.html
+++ b/checkin/views/main.html
@@ -127,7 +127,7 @@
           |
             <a href="/users">Manage Booth Users</a>
           |
-            <a href="/visitors">Manage Visitors</a>
+            <a href="visitors">Manage Visitors</a>
           |
             <a href="get_random_visitor">Run Raffle</a>
         </div>
