--- a/checkin/css/checkin.css
+++ b/checkin/css/checkin.css
@@ -10,6 +10,11 @@ body {
 }
 
 .orangebg{
-	
 	background-color: #ffac33;
+}
+
+.navbar-default {
+    border: 0;
+		margin-bottom:0;
+		padding-bottom:0;
 }
