--- a/checkin/views/raffle_results.html
+++ b/checkin/views/raffle_results.html
@@ -4,4 +4,5 @@
 
 <h1>And the winner is... <b>{{ visitor_id }}</b>!!!!!</h1>
 
+<h2><a href = "get_random_visitor"> Click here to re-run</a></h2>
 {% endblock %}
