made headway on new admin page

--- a/checkin/views/main.html
+++ b/checkin/views/main.html
@@ -105,6 +105,7 @@
                     {% endif %}
                     <li><a href="/users">Manage Users</a></li>
                     <li><a href="/visitors">Manage Visitors</a></li>
+                    <li><a href="/custom-domains">Custom Domain Names</a></li>
                     <li><a href="get_random_visitor">Run Raffle</a></li>
                   </ul>
               </li>
