--- a/checkin/views/main.html
+++ b/checkin/views/main.html
@@ -73,7 +73,7 @@
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="background-color:white;color:black;">
             <ul class="nav navbar-nav">
               {% if not user %}
                   <li><a href="sign_in">Login</a></li>
@@ -84,7 +84,7 @@
                   <li><a href="sign_out">Logout</a></li>
                   <li><a href="checkin_visitor">Checkin Student</a></li>
                   <li><a href="edit">Edit Profile</a></li>
-                  <li><a href="/">Home</a></li>
+                  <li><a href="home">Home</a></li>
                   <li><a href="sample">Sample Student Checkin</a></li>
                   <li>
                     {% if user_link != None and user_link != 'None' and user_link_text != None %}
@@ -103,7 +103,8 @@
                 </li>
               {% endif %}
               {% if user and user.is_deployment_admin %}
-              <li class="dropdown">
+              <li><a href="admin">Admin</a></li>
+              <!--<li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin<span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     {% if logo_url %}
@@ -116,7 +117,7 @@
                     <li><a href="/custom-domains">Custom Domain Names</a></li>
                     <li><a href="get_random_visitor">Run Raffle</a></li>
                   </ul>
-              </li>
+              </li>-->
               {% endif %}
             </ul>
           </div><!-- /.navbar-collapse -->
